modules/vpc/2-igw.tf
// The internet gateway provides internet access to public subnets
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    "Name" = "${var.env}-igw"
  }
}
